# arguably

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: arguably.hpp
test/: CMakeLists.txt  tests.cpp
